--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header id="showcase" class="grid">
     <div class="bg-image"></div>
     <div class="content-wrap">
-        <h1>The Grand Princess Welcomes you.</h1>
+        <h1>The Grand Princess Welcomes YOU</h1>
     </div>
 </header>
 <!-- Main Content -->
