--- a/index.html
+++ b/index.html
@@ -22,22 +22,28 @@
             <img src="/images/sm-mom0.JPG" alt="princess">
             <div class="content-text">
                 <p>Grand Princess Risa Sophia Marcellus (henceforth referred to as GPRSM) is a native San Franciscan, born and raised in various
-                    areas throughout San Francisco city, and also across the greater Bay Area.</p><p> Her upbringing provided a
+                    areas throughout San Francisco city, and also across the greater Bay Area.
+                </p>
+                <p>Her upbringing provided a
                     socially diverse and culturally enriched life, and she was encouraged to live off of the regular common
-                    economy, working different careers.</p><p>
-                    Although she no longer reside in San Francisco, she spends many months throughout the year
+                    economy, working different careers.
+                </p>
+                <p>Although she no longer reside in San Francisco, she spends many months throughout the year
                     supporting different California charities and more frequently in S.F, by way of appearances, donations,
-                    and using her family name and heritage to help grow charity attendance. </p><p>
-                     
-                    Ethnically, GPRSM is a blend of Nobel Heritage from both of her parents. Her mother
-                    descends from a lineage of nobility in both Mecklenburg-Vorpomern, Pomerania Germany and Spain.</p><p>
-                    Her father’s lineage hails directly from Sir Knight John Dunham, whom served as an important Knight of
-                    King Henry VII of England.</p><p> Other examples of notable members of her father’s lineage is her
+                    and using her family name and heritage to help grow charity attendance.</p>
+                <p>Ethnically, GPRSM is a blend of Nobel Heritage from both of her parents. Her mother
+                    descends from a lineage of nobility in both Mecklenburg-Vorpomern, Pomerania Germany and Spain.
+                </p>
+                <p>Her father’s lineage hails directly from Sir Knight John Dunham, whom served as an important Knight of
+                    King Henry VII of England.
+                </p>
+                <p>Other examples of notable members of her father’s lineage is her
                     grandmother, Frances Dunham Catlett, a famous artist locally known in San Francisco and the greater
                     Bay Area, whose works of art are currently featured in an exhibit in the Washington DC Smithsonian
                     museum, as well as her great-aunt, Katherine Dunham, a well-known dance choreographer, featured in
                     both film and live shows in Hollywood, CA, whose multiple dance schools can be found worldwide
-                    offering instruction in the "Dunham Technique" style of dance.</p>
+                    offering instruction in the "Dunham Technique" style of dance.
+                </p>
             </div>
         </div>
     </section>
