--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     socially diverse and culturally enriched life, and she was encouraged to live off of the regular common
                     economy, working different careers.
                 </p>
-                <p>Although she no longer reside in San Francisco, she spends many months throughout the year
+                <p>Although she no longer resides in San Francisco, she spends many months throughout the year
                     supporting different California charities and more frequently in S.F, by way of appearances, donations,
                     and using her family name and heritage to help grow charity attendance.</p>
                 <p>Ethnically, GPRSM is a blend of Nobel Heritage from both of her parents. Her mother
